// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CreateAccount /> should render properly when the activation link is expired 1`] = `
.emotion-49 {
  height: 100%;
}

.emotion-2 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  height: 44px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #2e2e2e;
  box-shadow: 0 0 4px 0 rgba(0,0,0,0.5);
  z-index: 100;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.emotion-0 {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-48 {
  margin-top: 44px;
  padding-left: 32px;
  padding-right: 32px;
  padding-bottom: 32px;
  height: calc(100vh - 44px);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-3 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

.emotion-47 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #ffb6b2;
  border-radius: 2px;
  padding: 12px;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #000000;
  font-weight: 500;
}

.emotion-7 {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  color: #c92300;
}

.emotion-8 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

.emotion-12 {
  padding-top: 8px;
}

.emotion-9 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-11 {
  position: relative;
}

.emotion-10 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-10:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-10:focus {
  color: #000000;
  background-color: #ffffff;
}

.emotion-35 {
  margin: 0;
  padding-top: 32px;
  color: #b3b3b3;
}

.emotion-35 a {
  color: #73b61c;
}

.emotion-43 {
  padding-top: 16px;
}

.emotion-42 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  padding-bottom: 16px;
  padding-left: 0;
}

.emotion-39 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-36 {
  margin: 0;
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-38 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-37 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-41 {
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-40 {
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 700;
}

.emotion-46 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-46 button,
.emotion-46 a {
  margin-right: 16px;
}

.emotion-44 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-44:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-44[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-44,
.emotion-44:hover,
.emotion-44:visited {
  background-color: #808080;
}

.emotion-44:hover {
  background-color: #b3b3b3;
}

.emotion-44[aria-disabled=true] {
  background-color: #808080;
}

.emotion-45 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-45:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-45[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-45,
.emotion-45:hover,
.emotion-45:visited {
  background-color: #73b61c;
}

.emotion-45:hover {
  background-color: #96c955;
}

.emotion-45[aria-disabled=true] {
  background-color: #808080;
}

<div
  className="emotion-49"
>
  <div
    className="emotion-2"
  >
    <div
      className="emotion-1"
    >
      <a
        aria-label="Home"
        className="emotion-0"
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <svg
          data-file-name="logo.svg"
          width={110}
        />
      </a>
    </div>
    <div />
  </div>
  <div
    className="emotion-48"
  >
    <h2
      className="emotion-3"
    >
      Create an Account
    </h2>
    <form
      action=""
      className="emotion-47"
      method="post"
      onSubmit={[Function]}
    >
      <div
        className="emotion-6"
      >
        <div
          className="emotion-5"
        >
          <svg
            color="#c92300"
            data-file-name="warning.svg"
            height={20}
          />
          <div
            className="emotion-4"
            role="alert"
          >
            Confirmation Link Expired
          </div>
        </div>
      </div>
      <div
        className="emotion-7"
      >
        Confirmation links expire after three days. Please create a new account.
      </div>
      <h3
        className="emotion-8"
      >
        Name
      </h3>
      <div
        className="emotion-12"
      >
        <label
          className="emotion-9"
          htmlFor="firstName"
        >
          First Name
        </label>
        <div
          className="emotion-11"
        >
          <input
            autoFocus={true}
            className="emotion-10"
            id="firstName"
            name="firstName"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="emotion-12"
        >
           
        </div>
      </div>
      <div
        className="emotion-12"
      >
        <label
          className="emotion-9"
          htmlFor="lastName"
        >
          Last Name
        </label>
        <div
          className="emotion-11"
        >
          <input
            className="emotion-10"
            id="lastName"
            name="lastName"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="emotion-12"
        >
           
        </div>
      </div>
      <div
        className="emotion-12"
      >
        <label
          className="emotion-9"
          htmlFor="email"
        >
          Email
        </label>
        <div
          className="emotion-11"
        >
          <input
            className="emotion-10"
            id="email"
            name="email"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="emotion-12"
        >
           
        </div>
      </div>
      <h3
        className="emotion-8"
      >
        Password
      </h3>
      <div
        className="emotion-12"
      >
        <label
          className="emotion-9"
          htmlFor="password"
        >
          Password
        </label>
        <div
          className="emotion-11"
        >
          <input
            className="emotion-10"
            id="password"
            name="password"
            onChange={[Function]}
            type="password"
            value=""
          />
        </div>
        <div
          className="emotion-12"
        >
           
        </div>
      </div>
      <div
        className="emotion-12"
      >
        <label
          className="emotion-9"
          htmlFor="confirmPassword"
        >
          Confirm Password
        </label>
        <div
          className="emotion-11"
        >
          <input
            className="emotion-10"
            id="confirmPassword"
            name="confirmPassword"
            onChange={[Function]}
            type="password"
            value=""
          />
        </div>
        <div
          className="emotion-12"
        >
           
        </div>
      </div>
      <p
        className="emotion-35"
      >
        By accepting and clicking the "Continue" button you confirm that you have read and agree with Zorroa’s
         
        <a
          href="/policies/20200410/terms-of-use.pdf"
          rel="noopener noreferrer"
          target="_blank"
        >
          Terms of Use
        </a>
         
        and
         
        <a
          href="/policies/20200410/privacy-policy.pdf"
          rel="noopener noreferrer"
          target="_blank"
        >
          Privacy Policy
        </a>
        .
      </p>
      <div
        className="emotion-43"
      >
        <label
          className="emotion-42"
        >
          <div
            className="emotion-39"
          >
            <input
              className="emotion-36"
              defaultChecked={false}
              onClick={[Function]}
              type="checkbox"
              value="isChecked"
            />
            <div
              className="emotion-38"
            >
              <svg
                className="emotion-37"
                data-file-name="checkmark.svg"
                width={20}
              />
            </div>
          </div>
          <div
            className="emotion-41"
          >
            <span
              className="emotion-40"
            >
              Accept
            </span>
          </div>
        </label>
      </div>
      <div
        className="emotion-46"
      >
        <a
          className="emotion-44"
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Cancel
        </a>
        <button
          aria-disabled={true}
          className="emotion-45"
          onClick={[Function]}
          type="submit"
        >
          Save
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<CreateAccount /> should render properly when there is a token 1`] = `null`;

exports[`<CreateAccount /> should render properly when there is no token 1`] = `
.emotion-45 {
  height: 100%;
}

.emotion-2 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  height: 44px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #2e2e2e;
  box-shadow: 0 0 4px 0 rgba(0,0,0,0.5);
  z-index: 100;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.emotion-0 {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-44 {
  margin-top: 44px;
  padding-left: 32px;
  padding-right: 32px;
  padding-bottom: 32px;
  height: calc(100vh - 44px);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-3 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
}

.emotion-43 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
}

.emotion-4 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-top: 16px;
}

.emotion-8 {
  padding-top: 8px;
}

.emotion-5 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-7 {
  position: relative;
}

.emotion-6 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-6:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
}

.emotion-6:focus {
  color: #000000;
  background-color: #ffffff;
}

.emotion-31 {
  margin: 0;
  padding-top: 32px;
  color: #b3b3b3;
}

.emotion-31 a {
  color: #73b61c;
}

.emotion-39 {
  padding-top: 16px;
}

.emotion-38 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  padding-bottom: 16px;
  padding-left: 0;
}

.emotion-35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-32 {
  margin: 0;
  padding: 0;
  width: 20px;
  height: 20px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-34 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-33 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-37 {
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-36 {
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 700;
}

.emotion-42 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-42 button,
.emotion-42 a {
  margin-right: 16px;
}

.emotion-40 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-40:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-40[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-40,
.emotion-40:hover,
.emotion-40:visited {
  background-color: #808080;
}

.emotion-40:hover {
  background-color: #b3b3b3;
}

.emotion-40[aria-disabled=true] {
  background-color: #808080;
}

.emotion-41 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
}

.emotion-41:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-41[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-41,
.emotion-41:hover,
.emotion-41:visited {
  background-color: #73b61c;
}

.emotion-41:hover {
  background-color: #96c955;
}

.emotion-41[aria-disabled=true] {
  background-color: #808080;
}

<div
  className="emotion-45"
>
  <div
    className="emotion-2"
  >
    <div
      className="emotion-1"
    >
      <a
        aria-label="Home"
        className="emotion-0"
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        <svg
          data-file-name="logo.svg"
          width={110}
        />
      </a>
    </div>
    <div />
  </div>
  <div
    className="emotion-44"
  >
    <h2
      className="emotion-3"
    >
      Create an Account
    </h2>
    <form
      action=""
      className="emotion-43"
      method="post"
      onSubmit={[Function]}
    >
      <h3
        className="emotion-4"
      >
        Name
      </h3>
      <div
        className="emotion-8"
      >
        <label
          className="emotion-5"
          htmlFor="firstName"
        >
          First Name
        </label>
        <div
          className="emotion-7"
        >
          <input
            autoFocus={true}
            className="emotion-6"
            id="firstName"
            name="firstName"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="emotion-8"
        >
           
        </div>
      </div>
      <div
        className="emotion-8"
      >
        <label
          className="emotion-5"
          htmlFor="lastName"
        >
          Last Name
        </label>
        <div
          className="emotion-7"
        >
          <input
            className="emotion-6"
            id="lastName"
            name="lastName"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="emotion-8"
        >
           
        </div>
      </div>
      <div
        className="emotion-8"
      >
        <label
          className="emotion-5"
          htmlFor="email"
        >
          Email
        </label>
        <div
          className="emotion-7"
        >
          <input
            className="emotion-6"
            id="email"
            name="email"
            onChange={[Function]}
            type="text"
            value=""
          />
        </div>
        <div
          className="emotion-8"
        >
           
        </div>
      </div>
      <h3
        className="emotion-4"
      >
        Password
      </h3>
      <div
        className="emotion-8"
      >
        <label
          className="emotion-5"
          htmlFor="password"
        >
          Password
        </label>
        <div
          className="emotion-7"
        >
          <input
            className="emotion-6"
            id="password"
            name="password"
            onChange={[Function]}
            type="password"
            value=""
          />
        </div>
        <div
          className="emotion-8"
        >
           
        </div>
      </div>
      <div
        className="emotion-8"
      >
        <label
          className="emotion-5"
          htmlFor="confirmPassword"
        >
          Confirm Password
        </label>
        <div
          className="emotion-7"
        >
          <input
            className="emotion-6"
            id="confirmPassword"
            name="confirmPassword"
            onChange={[Function]}
            type="password"
            value=""
          />
        </div>
        <div
          className="emotion-8"
        >
           
        </div>
      </div>
      <p
        className="emotion-31"
      >
        By accepting and clicking the "Continue" button you confirm that you have read and agree with Zorroa’s
         
        <a
          href="/policies/20200410/terms-of-use.pdf"
          rel="noopener noreferrer"
          target="_blank"
        >
          Terms of Use
        </a>
         
        and
         
        <a
          href="/policies/20200410/privacy-policy.pdf"
          rel="noopener noreferrer"
          target="_blank"
        >
          Privacy Policy
        </a>
        .
      </p>
      <div
        className="emotion-39"
      >
        <label
          className="emotion-38"
        >
          <div
            className="emotion-35"
          >
            <input
              className="emotion-32"
              defaultChecked={false}
              onClick={[Function]}
              type="checkbox"
              value="isChecked"
            />
            <div
              className="emotion-34"
            >
              <svg
                className="emotion-33"
                data-file-name="checkmark.svg"
                width={20}
              />
            </div>
          </div>
          <div
            className="emotion-37"
          >
            <span
              className="emotion-36"
            >
              Accept
            </span>
          </div>
        </label>
      </div>
      <div
        className="emotion-42"
      >
        <a
          className="emotion-40"
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Cancel
        </a>
        <button
          aria-disabled={true}
          className="emotion-41"
          onClick={[Function]}
          type="submit"
        >
          Save
        </button>
      </div>
    </form>
  </div>
</div>
`;
